--- a/BMI/index.html
+++ b/BMI/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <nav>
+      <p>BMI Calculator</p>
+      
+    </nav>
 
+    <div class="main">
+      <h2>BMI</h2>
+      <form>
+        <label for="height">Height in cm:</label
+        ><input type="text" name="" id="height" /><br><br>
+        <label for="weight">Weight in kg:</label
+        ><input type="text" name="" id="weight" /><br><br>
+        <input type="submit" value="Calculate"></input><br><br>
+        <div class="result"></div>
+        <div class="bmi-guide">
+          <h2>BMI weight guide</h2>
+          <p style="background-color: #81ecec;">Under weight = less than 18.6</p><br><br>
+          <p style="background-color: #00b894;">normal weight = 18.6 to 24.9</p><br><br>
+          <p style="background-color: #d63031;">over weight = greater than 24.9</p><br>
+        </div>
+      </form>
+    </div>
+
+    <div class="footer">By Abhimanyu.</div>
+    <script src="index.js"></script>
+  </body>
+</html>
