--- a/Img-Slider/index.html
+++ b/Img-Slider/index.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Img Slider - Abhimanyu</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="slider-container">
+        <div class="img-container">
+            <img src="/pics/1 (1).jpg" alt="">
+            <img src=" pics/3.png" alt="">
+            <img src="pics/4.png" alt="">
+            <img src="pics/5.jpg" alt="">
+        </div>
+        <i class="fa-solid fa-angles-left btn prev"></i>
+        <i class="fa-solid fa-angles-right btn next"></i>
+    </div>
+</body>
+<script>
+    let currImg = 1;
+    const imgContainerEle = document.querySelector(".img-container");
+    const nextEle = document.querySelector(".next");
+    const imgCount = document.querySelectorAll("img");
+    const prevEle = document.querySelector(".prev");
+
+
+
+    nextEle.addEventListener("click", () => {
+        currImg++;
+        updateImg();
+
+
+    })
+
+    prevEle.addEventListener("click", () => {
+        currImg--;
+        updateImg();
+
+    })
+
+    function updateImg() {
+        if (currImg > imgCount.length) {
+            currImg = 1;
+        }
+        else if (currImg < 1) {
+            currImg = imgCount.length
+        }
+        imgContainerEle.style.
+            transform = `translateX(-${(currImg - 1) * 500}px)`
+        setTimeout
+    }
+</script>
+
+</html>
