--- a/TO-DO/index.html
+++ b/TO-DO/index.html
@@ -1,1 +1,22 @@
+<!-- a simple TO-DO app using HTML,CSS,JS -->
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TO-DO by Abhimanyu</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>TO DO</h1>
+    <input type="text" placeholder="enter tasks" id="input" />
+    <button id="addTask">+</button>
+
+    <div class="task-list"></div>
+    
+</div>
+  </body>
+
+<script src="index.js"></script>
+</html>
