--- a/button_effect/index.html
+++ b/button_effect/index.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ribble Effect - Abhimanyu</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
     <a href="#" class="btn">
         <span>button</span>
     </a>
-
+<script src="index.js"></script>
 </body>
 
 </html>
